<?xml version="1.0"?>
<package format="2">
  <name>pe_planner</name>
  <version>1.1.2</version>
  <description>
    A performance-enhanced Quadrotor motion planner
  </description>
  <maintainer email="12010508@mail.sustech.edu.cn">Eason Hua</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>bspline_opt</depend>
  <depend>plan_env</depend>
  <depend>path_searching</depend>

  <build_depend>traj_utils</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>traj_utils</exec_depend>

  <export>
  </export>
</package>
